<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.me5013zu.surveyapp.ResultsActivity">

    <TextView
        android:id="@+id/results_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_textview"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"/>

    <TextView
        android:id="@+id/yes_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_results"
        android:layout_alignBaseline="@+id/no_results"
        android:layout_alignBottom="@+id/no_results"
        android:layout_toLeftOf="@+id/results_textview"
        android:layout_toStartOf="@+id/results_textview"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/results_textview"
        android:layout_toRightOf="@+id/results_textview"
        android:layout_toEndOf="@+id/results_textview"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"/>

</RelativeLayout>
